# podcast

./: .gitignore  Makefile  README.md
Application/: .env.example  README.md  (+1 more)
backend/: .env-example  adRemovalTest.py  ad_detector.py  app.py  audio_editor.py  classifier.py  pod2.txt  pod2NoAds.txt  pod3.txt  podTranscripWithAds.txt  podTranscript.txt  pyproject.toml  transcriber.py
backend/config/: settings.py
backend/llm/data/transcriptions/: ep1.txt  ep2.txt
backend/llm/llm_evaluation/: evaluation.py  models.py  utils.py
backend/podcast_processor/: config.py  main.py
backend/podcast_processor/ad_detection/: detect_ads.py  token_utils.py  utils.py
backend/podcast_processor/data/ad_detections/large/gpt-4o-mini/: GRC978_ads.json
backend/podcast_processor/data/ad_detections/small/gpt-4o/: NYT_ads.json
backend/podcast_processor/data/ad_detections/tiny/gpt-4o/: GRC978_ads.json
backend/podcast_processor/data/ground_truth_ads/: NYT_ads.json
backend/podcast_processor/data/temp/: Freakonomics.txt  Freakonomics_ads.json  Freakonomics_ground.txt
backend/podcast_processor/data/transcriptions/small/: GRC978_segments.json  pricessdiana.txt
backend/podcast_processor/data/transcriptions/tiny/: pricessdiana_segments.json
backend/podcast_processor/data/transcripts/: pricessdiana.txt
backend/podcast_processor/evaluation/: __init__.py  evaluate.py  utils.py
backend/podcast_processor/plotting/: plots.py
backend/podcast_processor/reporting/: report.py
backend/podcast_processor/reporting/templates/: full_transcript_template.html  summary_template.html
backend/podcast_processor/transcription/: transcribe.py  utils.py
backend/transcription/: evaluate_whisper_models.py  main.py
backend/transcription/data/temp/: 845.txt  thisamericanlife.txt
backend/transcription/data/temp/run_17/: summary_report.html
backend/transcription/data/transcriptions/base/: 845.txt  pricessdiana.txt  thisamericanlife.txt
backend/transcription/data/transcriptions/large/: 845.txt  thisamericanlife.txt
backend/transcription/data/transcriptions/medium/: 845.txt  pricessdiana.txt  thisamericanlife.txt
backend/transcription/data/transcriptions/small/: 845.txt  thisamericanlife.txt
backend/transcription/data/transcriptions/tiny/: 845.txt  thisamericanlife.txt
backend/transcription/plots/run_1/transcription_diffs/base/: 845.html
backend/transcription/plots/run_1/transcription_diffs/tiny/: pricessdiana.html  thisamericanlife.html
backend/transcription/plots/run_2/transcription_diffs/tiny/: GRC978.html
backend/transcription/plots/run_4/: summary_report.html
backend/transcription/plots/run_4/transcription_diffs/base/: pricessdiana.html  thisamericanlife.html
backend/transcription/plots/run_4/transcription_diffs/large/: 845.html  pricessdiana.html  thisamericanlife.html
backend/transcription/plots/run_4/transcription_diffs/medium/: 845.html  thisamericanlife.html
backend/transcription/plots/run_4/transcription_diffs/small/: 845.html  pricessdiana.html  thisamericanlife.html
backend/transcription/plots/run_4/transcription_diffs/tiny/: 845.html
backend/transcription/plots/run_5/: summary_report.html
backend/transcription/plots/run_5/transcription_diffs/large/: GRC978.html
backend/transcription/whisper_evaluation/: __init__.py  evaluation.py  plotting.py  utils.py
backend/transcriptions/whisper_evaluation/: config.py
proxy/: modify_stream.py  pyproject.toml
(+135 files in other folders)
