[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sanderskofsrud <sandesko@stud.ntnu.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pydub = "^0.25.1"
openai-whisper = "^20240930"
transformers = "^4.46.1"
torch = "^2.5.1"
soundfile = "^0.12.1"
azure-cognitiveservices-speech = "^1.41.1"
python-dotenv = "^1.0.1"
openai = "^1.54.0"
azure-ai-textanalytics = "^5.3.0"
whisper = "^1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
